Fix clipboard support

--- a/options.html
+++ b/options.html
@@ -47,7 +47,7 @@
         <button id="save">Save and Reload Page</button>
         <p>You've seen <span id="check_numb"></span> pretty-printed GML code snippets!</p>
         <div id="spacer"></div>
-        Learn more at <a href="https://www.GMLsnip.com/">GMLsnip.com</a>&nbsp;&bull;&nbsp;Developed by <a href="https://www.zackbanack.com/">Zack Banack</a>&nbsp;&bull;&nbsp;<a href="https://buymeacoffee.com/zackb/">Support</a>
+        Learn more at <a href="https://www.GMLsnip.com/">GMLsnip.com</a>&nbsp;&bull;&nbsp;Developed by <a href="https://www.zackbanack.com/">Zack Banack</a>&nbsp;&bull;&nbsp;<a href="https://gmlsnip.com/support">Support</a>
         <script src="js/options.js"></script>
     </body>
 </html>
